<resources>
    <string name="plugin_uex_image_choose">选择</string>
    <string name="plugin_uex_image_at_least_choose">请至少选择%s张图片</string>
    <string name="plugin_uex_image_share">分享</string>
    <string name="plugin_uex_image_list">列表</string>
    <string name="plugin_image_browser_undefine_image_url">未指定图片链接！</string>
    <string name="plugin_image_browser_url_arguments_error">链接参数错误！</string>
    <string name="plugin_image_browser_now_loading_image">正在加载图片</string>
    <string name="plugin_image_browser_load_image_fail">加载图片失败！</string>
    <string name="plugin_image_browser_system_have_not_return_image_path">系统未返回图片路径！</string>
    <string name="plugin_image_browser_are_you_sure_to_exit_image_broswer">确定退出图片浏览器吗？</string>
    <string name="plugin_image_browser_download_is_canceled">图片下载已取消</string>
    <string name="plugin_image_borwser_now_saving_image_please_wait">正在保存图片，请稍候</string>
    <string name="plugin_image_browser_sd_have_not_mount_so_can_not_save">SD卡未加载，无法保存</string>
    <string name="plugin_image_browser_save_fail">保存失败！</string>
    <string name="plugin_image_browser_save_folder">保存目录</string>
    <string name="plugin_image_browser_image_have_not_load_can_not_save">图片尚未加载，无法保存！</string>
    <string name="plugin_image_browser_photo">图片</string>
    <string name="plugin_app_market_update_file_default_msg">发现新版本，立即升级体验吧！</string>
    <string name="plugin_app_market_update_patch_default_msg">发现新数据包，点击下载后，下次应用启动时启用！</string>
    <string name="plugin_appmarket_add_app_to_door">添加到首页</string>
    <string name="plugin_appmarket_del_app_ok">完\u0009\u0009成</string>
    <string name="plugin_appmarket_ex_empty">暂无更多应用！</string>
    <string name="plugin_appmarket_ex_title">东航动态</string>
    <string name="plugin_appmarket_ex_no_network">网络不给力</string>
    <string name="plugin_appmarket_ex_add_success">添加成功</string>
    <string name="plugin_sms_are_you_sure_to_send_sms">确定发送短信吗?</string>
    <string name="plugin_uexcalendar_string_day_name_format">EEE</string>
    <string name="plugin_uexcalendar_string_invalid_date">请在 %1$s 和 %2$s 之间选择.</string>
    <string name="plugin_uexcalendar_string_month_name_format">yyyy年MM月</string>
    <string name="plugin_log_error_no_permisson_INTERNET">没有网络访问权限</string>
    <string name="plugin_fileMgr_folder">文件夹</string>
    <string name="plugin_file_now_loading_folder">正在读取文件夹</string>
    <string name="plugin_file_can_not_open_this_folder">无法打开此目录!</string>
    <string name="plugin_file_not_exist">文件不存在!</string>
    <string name="plugin_file_file_path_error">文件路径错误!</string>
    <string name="plugin_file_can_not_mount_sdcard">无法加载存储卡</string>
    <string name="plugin_file_are_you_sure_to_exit_file_explorer">确定退出文件管理器吗</string>
    <string name="plugin_file_target_directory_is_not_exist_auto_redirect_to_sdcard">目前文件夹不存在,自动定位到SD卡目录!</string>
    <string name="plugin_file_input_path_is_not_valid_path_redirect_to_sdcard">传入路径不是一个有效的目录,自动定位到SD卡目录!</string>
    <string name="plugin_fileMgr_invalid_params">Invalid Params!</string>
    <string name="plugin_fileMgr_json_format_error">JSON Format Error!</string>
    <string name="plugin_fileMgr_need_keywords">Need Keywords</string>
    <string name="app_sign">appsigncontent</string>
    <string name="plugin_uexemm_query_ueser_cert_hint_str">本次登录需要验证用户证书，请输入证书授权码，申请证书。</string>
    <string name="plugin_uexemm_auth_code_et_hint_str">证书授权码</string>
    <string name="plugin_uexemm_query_ueser_cert_str">申请证书</string>
    <string name="plugin_uexemm_beyond_update_count">超过版本升级的数量限制！</string>
    <string name="plugin_uexemm_get_cert_file">获取证书失败！</string>
    <string name="plugin_uexemm_network_error">请检查您的网络状态</string>
    <string name="plugin_uexemm_network_error_title">无可用网络</string>
    <string name="plugin_uexemm_network_error_msg">您的应用只能访问离线资源</string>
    <string name="plugin_uexemm_exit_app">退出应用</string>
    <string name="plugin_uexemm_exit_sub_app">退出子应用</string>
    <string name="plugin_uexemm_continue">进入应用</string>
    <string name="plugin_uexemm_prompt_title">提示</string>
    <string name="plugin_uexemm_mamfail_msg">网络异常或服务器异常，请检查网络或服务器！</string>
    <string name="plugin_uexemm_mamforbidden_msg">您的应用功能将会受到限制</string>
    <string name="plugin_uexemm_app_sign_error_msg">应用签名非法</string>
    <string name="plugin_uexemm_warning_title">警告</string>
    <string name="plugin_uexemm_dialog_button_exit">退出</string>
    <string name="plugin_uexemm_parm_error">参数错误</string>
    <string name="plugin_uexemm_offline_login_error">离线登录失败</string>
    <string name="plugin_uexemm_msg_network_error">无法连接至服务器，请检查网络</string>
    <string name="plugin_uexemm_not_root_prompt">本应用仅适用于未Root机，即将关闭。</string>
    <string name="plugin_uexemm_new_app_default_prompt">发现新版本,是否升级?</string>
    <string name="plugin_uexemm_app_upgrade">更新</string>
    <string name="plugin_uexemm_button_cancel">取消</string>
    <string name="plugin_uexemm_sub_app_suspend_service">该子应用暂停服务</string>
    <string name="plugin_uexemm_downloading_file">正在下载文件</string>
    <string name="plugin_uexemm_download_fail">下载失败</string>
    <string name="plugin_uexemm_no_sd_card">您的手机未安装SD卡!</string>
    <string name="plugin_uexemm_connect_error">连接失败,请重试!</string>
    <string name="plugin_uexemm_download_error">下载出错,请重试!</string>
    <string name="plugin_uexemm_download_again">重新下载</string>
    <string name="plugin_uexemm_upgrade_later">暂不更新</string>
    <string name="plugin_uexemm_install_upgrade">安装更新</string>
    <string name="plugin_uexemm_download_completed">更新包下载完成</string>
    <string name="plugin_uexemm_not_found_app">未找到可执行的应用</string>
    <string name="plugin_uexemm_upgrade_msg">部分内容更新优化，请更新后使用</string>
    <string name="plugin_uexemm_upgrade_prompt">更新提示</string>
    <string name="plugin_uexemm_problems_msg">可能网络传输或其他问题造成，请点击重试</string>
    <string name="plugin_uexemm_upgrade_fail">更新失败</string>
    <string name="plugin_uexemm_retry">重试</string>
    <string name="plugin_uexemm_continue_upgrade_msg">上次更新未完成，请继续更新</string>
    <string name="plugin_uexemm_continue_upgrade_prompt">继续更新</string>
    <string name="plugin_uexemm_restart_prompt">更新完成，请重新启动！</string>
    <string name="plugin_uexemm_confirm">确定</string>
    <string name="plugin_uexemm_suspend_server">该应用暂停服务</string>
    <string name="plugin_email_attchment_path_params_error">附件路径参数错误！</string>
    <string name="plugin_camera_cancel">取消</string>
    <string name="plugin_camera_complete">完成</string>
    <string name="plugin_downloadermgr_error_parameter">参数错误</string>
    <string name="plugin_uexDocumentReader_file_not_exist">文件不存在</string>
    <string name="plugin_uexDocumentReader_file_not_exist_or_path_error">文件不存在或文件路径错误</string>
    <string name="plugin_audio_recoreder_recorder">录音机</string>
    <string name="plugin_audio_recorder_prepare_record">准备录音</string>
    <string name="plugin_audio_recorder_now_recording">正在录音...</string>
    <string name="plugin_audio_recorder_now_saving_record">正在保存录音...</string>
    <string name="plugin_audio_recorder_sdcard_free_space_not_enough">内存卡剩余空间不足!</string>
    <string name="plugin_audio_play_pause">暂停</string>
    <string name="plugin_audio_recorder_record_audio">录音</string>
    <string name="plugin_audio_recorder_start_record_fail">启动录音失败!</string>
    <string name="plugin_audio_recorder_init_audio_player_fail">初始化播放器失败!</string>
    <string name="plugin_audio_recorder_can_not_play_this_audio_file">无法播放此音频文件!</string>
    <string name="plugin_audio_recorder_please_stop_record_before_select_clip">请先停止录音再选择!</string>
    <string name="plugin_audio_no_open_error">文件未打开错误</string>
    <string name="plugin_audio_parameter_error">参数错误</string>
    <string name="plugin_audio_info_nofile">文件不支持</string>
    <string name="plugin_audio_can_not_mount_sdcard">无法加载存储卡</string>
    <string name="plugin_audio_music_name">无法加载存储卡</string>
    <string name="app_name">先声药业dev</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="complete">完成</string>
    <string name="path_error">路径错误!</string>
    <string name="settings">设置</string>
    <string name="save">保存</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">取消选定</string>
    <string name="select">选择</string>
    <string name="can_not_find_suitable_app_perform_this_operation">找不到适合的程序执行此操作!</string>
    <string name="exit">退出</string>
    <string name="confirm_delete">确定删除</string>
    <string name="ma">吗?</string>
    <string name="exit_message_server">该应用暂停服务</string>
    <string name="exit_message_appid">当前应用ID非法</string>
    <string name="error_parameter">参数错误</string>
    <string name="no_have_read_limits_power">没有读取权限</string>
    <string name="no_have_write_limits_power">没有写入权限</string>
    <string name="error_sdcard_is_not_available">SD卡不可用</string>
    <string name="error_file_does_not_exist">文件不存在</string>
    <string name="error_no_permisson_RW">没有读写权限</string>
    <string name="error_no_permisson_INTERNET">没有网络访问权限</string>
    <string name="no_permisson_declare">没有申明相关权限</string>
    <string name="info_update">发现新版本,是否升级?</string>
    <string name="browser_exitdialog_app_text">确定要退出程序吗？</string>
    <string name="browser_exitdialog_msg">退出提示</string>
    <string name="browser_dialog_error">错误提示</string>
    <string name="browser_init_error">程序不完整</string>
    <string name="appkey">a33d9730-eb09-43f5-83f1-eeb447adf9a4</string>
    <string name="appstatus">682C79692D6987569B3509E28B0D20682F3A6BBC711DE457E45AD5</string>
    <string name="push">true</string>
    <string name="certificate_psw" />
    <string name="widget_startup_report_host">https://modev.isimcere.com:18443/appIn/</string>
    <string name="push_host">modev.isimcere.com:1883</string>
    <string name="bindUser_host">https://modev.isimcere.com:18443/push/</string>
    <string name="analytics_host">https://modev.isimcere.com:18443/appIn/</string>
    <string name="mam_host">https://modev.isimcere.com:18443/emm/</string>
    <string name="mam_push_host_and_port" />
    <string name="platform_myspace_app_center">应用中心</string>
    <string name="platform_myspace_recommend_apps">推荐应用</string>
    <string name="platform_myspace_my_apps">我的应用</string>
    <string name="platform_myspace_pull_to_refresh">下拉刷新推荐列表</string>
    <string name="platform_myspace_release_to_refresh">释放刷新推荐列表</string>
    <string name="platform_myspace_loading">加载中…</string>
    <string name="platform_myspace_tap_to_refresh">点击刷新推荐列表</string>
    <string name="widgetone_version">4030.1.02.001.00.00.9999.000</string>
    <string name="platform_no_configuration_decryption_permissions">没有配置解密权限！</string>
    <string name="platform_downloading_file">正在下载文件</string>
    <string name="platform_connect_failed">连接失败,请重试!</string>
    <string name="platform_download_failed">下载出错,请重试!</string>
    <string name="platform_only_test">测试版本仅用于开发测试</string>
    <string name="platform_choose_app">请选择:</string>
    <string name="platform_widget_id_not_exist">AppId为 %1$s 的Widget不存在</string>
    <string name="platform_widget_path_not_exist">路径为 %1$s 的Widget不存在</string>
    <string name="platform_widget_search_failed">搜索Widget发生异常!请确认Widget是否损坏!</string>
    <string name="warning">警告</string>
    <string name="no_permission_to_open_window">没有打开%1$s窗口的权限</string>
    <string name="load_uex_object_error">uex对象加载发生异常,请检查XML文件!</string>
    <string name="install">安装…</string>
    <string name="install_failed">安装失败</string>
    <string name="get_open_login_list">尚未登录,正在获取开放平台登录列表</string>
    <string name="operation_cancel">操作已取消!</string>
    <string name="get_info_failed">获取信息失败!</string>
    <string name="download_info_error">下载信息错误!</string>
    <string name="app_has_download_please_run">应用已下载，请直接运行</string>
    <string name="app_downloading">应用正在下载请稍候…</string>
    <string name="get_user_info">正在获取用户登录信息…</string>
    <string name="get_login_list">尚未登录,获取登录列表…</string>
</resources>