<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <org.zywx.wbpalmstar.plugin.ueximagebrowser.MultiTouchImageView android:id="@id/plugin_image_preview_photo" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitCenter" android:layout_alignParentTop="true" />
    <RelativeLayout android:id="@id/plugin_image_preview_top" android:background="@drawable/plugin_imagebrowser_top_bg_shape" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_alignTop="@id/plugin_image_preview_photo">
        <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/plugin_image_preview_btn_back" android:background="@drawable/plugin_imagebrowser_back_selector" android:layout_width="60.0dip" android:layout_height="32.0dip" android:layout_marginLeft="12.0dip" android:text="@string/back" android:layout_centerVertical="true" />
        <TextView android:textSize="20.0sp" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/plugin_image_browser_photo" android:singleLine="true" android:shadowColor="#ff000000" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="1.0" android:layout_centerInParent="true" />
        <Button android:textSize="14.0dip" android:textColor="@android:color/white" android:gravity="center" android:id="@id/plugin_image_preview_btn_save" android:background="@drawable/plugin_imagebrowser_button_selector" android:layout_width="60.0dip" android:layout_height="32.0dip" android:layout_marginRight="8.0dip" android:text="@string/save" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>