<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v4.view.ViewPager android:id="@id/vp_picture" android:background="#e0000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <include android:id="@id/title_layout" layout="@layout/plugin_uex_image_common_title" />
    <RelativeLayout android:gravity="center_vertical" android:background="@color/plugin_uex_image_gray_4" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/tv_to_grid" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/plugin_uex_image_list" android:layout_alignBaseline="@id/checkbox" />
        <CheckBox android:id="@id/checkbox" android:background="@drawable/plugin_uex_image_picker_checkbox" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:checked="false" android:button="@null" android:layout_toLeftOf="@id/tv_checkbox" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/tv_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/plugin_uex_image_choose" android:layout_alignBaseline="@id/checkbox" android:layout_alignParentRight="true" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/tv_share" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/plugin_uex_image_share" android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>